--- a/client/index.html
+++ b/client/index.html
@@ -12,5 +12,9 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/luxon@2.3.1/build/global/luxon.min.js"></script>
+    <script>
+      let DateTime = luxon.DateTime;
+    </script>
   </body>
 </html>
